--- a/Computers.html
+++ b/Computers.html
@@ -91,7 +91,7 @@
 				<span class="dot" onclick="currentSlide(7)"></span>
 			</div>
 		  <nav>
-		    <a href="Homepage.html">Home</a> |
+		    <a href="index.md">Home</a> |
 		    <a href="Art.html">Artworks</a> |
 		    <a href="Computers.html">Computers</a> |
 		    <a href="League.html">LOL</a> |
