--- a/DessertJS.html
+++ b/DessertJS.html
@@ -49,7 +49,7 @@
 		<button id="dessert6" onclick="handleDesertClick()">Desert</button>
 		<button id="dessert7" onclick="handleDesertClick()">Desert</button>
 		<nav>
-			<a href="Homepage.html">Home</a> |
+			<a href="index.md">Home</a> |
 			<a href="Art.html">Artworks</a> |
 			<a href="Computers.html">Computers</a> |
 			<a href="League.html">LOL</a> |
