--- a/League.html
+++ b/League.html
@@ -14,7 +14,7 @@
 				Now we have a group of about 12 people that play together and have built
 				a community.<br><a href="https://na.op.gg/summoner/userName=Hillmdog" target="_blank">My OP.gg</a></p>
 				<nav>
-					<a href="Homepage.html">Home</a> |
+					<a href="index.md">Home</a> |
 					<a href="Art.html">Artworks</a> |
 					<a href="Computers.html">Computers</a> |
 					<a href="League.html">LOL</a> |
