--- a/Art.html
+++ b/Art.html
@@ -80,7 +80,7 @@
 	</div>
 	</div>
 	<nav>
-		<a href="index.md">Home</a> |
+		<a href="Homepage.html">Home</a> |
 		<a href="Art.html">Artworks</a> |
 		<a href="Computers.html">Computers</a> |
 		<a href="League.html">LOL</a> |
